<resources>
    <string name="app_name">万运通司机版</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">add</string>
    <string name="please_input_phone_numbuter">请输入手机号</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="getAuthCode">获取验证码</string>
    <string name="getMoney">获取鉴权金额</string>
    <string name="phone_fail">手机号不正确</string>
    <string name="after_get">后获取</string>
    <string name="order_yiwancheng">已完成订单:</string>
    <string name="shouru">收入:</string>
    <string name="baozhengjin">保证金:</string>
    <string name="tixian">提现</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="xiangguanxieyi">相关协议</string>
    <string name="wodeqianbao">我的钱包</string>
    <string name="logout">退出登录</string>
    <string name="shouye">首页</string>
    <string name="dan">单</string>
    <string name="main_commantinfo">当前没有正在做的任务\n快去抢单吧！！</string>
    <string name="yunfei">运费:</string>
    <string name="xianjin">现金:</string>
    <string name="youka">油卡:</string>
    <string name="zengsong">赠送:</string>
    <string name="qitashouru">其他收入:</string>
    <string name="qitakouchu">其他扣除:</string>
    <string name="chakanxiangqing">查看详情</string>
    <string name="renwushuoming">任务说明</string>
    <string name="chakanzhaopian">查看照片</string>
    <string name="chakantixiexiangqing">查看提卸详情</string>
    <string name="zhuang">装:</string>
    <string name="xie">卸:</string>
    <string name="xie1">卸:</string>
    <string name="qitafeiyong">其他费用</string>
    <string name="jine_yuan">金额（元）</string>
    <string name="kouchuyuanyin">扣除原因</string>
    <string name="othershouru">其他收入</string>
    <string name="otherkouchu">其他扣除</string>
    <string name="personalinfo">个人信息</string>
    <string name="xingming">姓名</string>
    <string name="idcard">身份证</string>
    <string name="phonenum">手机号码</string>
    <string name="shenfenzhengzhengmian">身份证正面</string>
    <string name="shenfenzhengfenmian">身份证反面</string>
    <string name="shouchishenfenzheng">手持身份证</string>
    <string name="chepaihao">车牌号</string>
    <string name="chexing">车型</string>
    <string name="chexing1">车型:</string>
    <string name="xingshizheng">行驶证</string>
    <string name="jiashizheng">驾驶证</string>
    <string name="suoyouren">车辆所有人</string>
    <string name="xingshizhengzhengmianzhaopian">行驶证正面照片</string>
    <string name="jiashizhengzhengmianzhaopian">驾驶证正面照片</string>
    <string name="xieyi">协议</string>
    <string name="lishidingdan">历史订单</string>
    <string name="history_order">历史订单</string>
    <string name="zongshourue">总收入额:</string>
    <string name="youkajine">油卡金额:</string>
    <string name="zengsongjine">赠送金额:</string>
    <string name="xianjinjine">现金金额:</string>
    <string name="all_order">全部订单</string>
    <string name="yundanhao1">运单号:</string>
    <string name="luxian1">路线:</string>
    <string name="my_wallet">我的钱包</string>
    <string name="leixing">类型</string>
    <string name="zongjijine">总计金额</string>
    <string name="keyongjine">可用金额:</string>
    <string name="ketixianjine">可提现金额:</string>
    <string name="bingbankcaark">绑定银行卡</string>
    <string name="please_input_bankcar">请输入银行卡号</string>
    <string name="bankname">银行名称</string>
    <string name="please_select_bank">请选择银行</string>
    <string name="yuliushoujihao">预留手机号</string>
    <string name="has_send_to_this_phone">已发送到该手机</string>
    <string name="orderno">订单号:</string>
    <string name="ti">提</string>
    <string name="graborder">抢单大厅</string>
    <string name="yujitihuoshijian1">预计提货时间:</string>
    <string name="yujitihuoshijian">预计提货时间</string>
    <string name="dun">吨</string>
    <string name="mi">米</string>
    <string name="xiegang">/</string>
    <string name="binding_youka">绑定油卡</string>
    <string name="input_or_saoyisao">请输入油卡编号</string>
    <string name="binding">绑定</string>
    <string name="saoyisao">扫一扫</string>
    <string name="tixiehuodi">提卸货地</string>
    <string name="lookpic">查看照片</string>
    <string name="zhuanghuopaizhao">装货拍照</string>
    <string name="qianshoupaizhao">签收拍照</string>
    <string name="delete_pic">删除照片？</string>
    <string name="quxiao">取消</string>
    <string name="signpic">签收照片</string>
    <string name="qianshoudanbinding">签收单绑定</string>
    <string name="please_input_sign_num">请输入签收单编号</string>
    <string name="lianxiren">联系人:</string>
    <string name="lianxidianhua">联系电话</string>
    <string name="tihuodi">提货地:</string>
    <string name="xiehuodi">卸货地:</string>
    <string name="please_input_youkacode">请输入油卡号</string>
    <string name="chongxinpaizhao">重新拍照</string>
    <string name="personalinfoauth">信息认证</string>
    <string name="please_input_idcard">请输入身份证号</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_carnum">请输入车牌号</string>
    <string name="please_select_cartype">请选择车辆类型</string>
    <string name="please_input_xingshizheng">请输入行驶证号</string>
    <string name="please_input_jiashizheng">请输入驾驶证号</string>
    <string name="please_input_cheliangsuoyouren">请输入车辆所有人</string>
    <string name="please_load_idcardim1">请上传身份证正面照片</string>
    <string name="please_load_idcardim2">请输入身份证反面照片</string>
    <string name="please_load_idcardim3">请上传手持身份证照片</string>
    <string name="please_load_jiashizheng">请上传驾驶证照片</string>
    <string name="please_load_xingshizheng">请上传行驶证照照片</string>
    <string name="no_auth">未进行资料认证</string>
    <string name="auth_ing">认证审核中</string>
    <string name="auth_fail">认证未通过，请重新填写认证资料</string>
    <string name="yuandanzhuangtai">运单状态</string>
    <string name="yuandanzhuangtai1">运单状态:</string>
    <string name="yuandanhao">运单号:</string>
    <string name="tihuoshijian">提货时间:</string>
    <string name="xiehuoshijian">卸货时间:</string>
    <string name="tuoshu">托数:</string>
    <string name="tiji">体积:</string>
    <string name="baozhi">保值:</string>
    <string name="remark">备注:</string>
    <string name="chongzhi_success">充值成功</string>
    <string name="chongzhi_fail">充值失败</string>
    <string name="chongzhijine">充值金额</string>
    <string name="tixianjine">提现金额</string>
    <string name="xiayibu">下一步</string>
    <string name="tixian_cuccess">提现成功</string>
    <string name="tixian_fail">提现失败</string>
    <string name="jiaonanajin">交纳押金</string>
    <string name="tuihuanyajin">退还押金</string>
    <string name="idcard_is_fail">身份证不正确</string>
    <string name="bankcar_is_format_fail">银行卡格式不正确</string>
    <string name="phone_numbuter_is_fail">手机号码不正确</string>
    <string name="binding_success">绑定成功</string>
    <string name="other_cost_total">其他收入总计:</string>
    <string name="other_kouchu_total">其他扣除总计::</string>
    <string name="jiaona">缴纳</string>
    <string name="tuihuan">退还</string>
    <string name="jiaonajine">缴纳金额</string>
    <string name="tuihuanjine">退还金额</string>
    <string name="tuihuanbaozhengjin">保证金将在1-5个工作日退还到您的钱包中</string>
    <string name="yundanxiangqing">运单详情</string>
    <string name="qianbaoxiangqing">钱包详情</string>
    <string name="youkahui">油卡惠:</string>
    <string name="othershouru1">其他收入:</string>
    <string name="otherkouchu1">其他扣除:</string>
    <string name="weijiesuan">未结算</string>
    <string name="jiesuanyouka">结算油卡</string>
    <string name="jiesuanyunfei">结算运费</string>
    <string name="yijiesuan">已结算</string>
    <string name="weidenglu">未登录</string>
    <string name="linkservice">联系客服</string>
    <string name="kaihuhang">开户行</string>
    <string name="qu">区</string>
    <string name="city">市</string>
    <string name="province">省</string>
    <string name="please_select_bank_1">请选择支行</string>
    <string name="please_select">请选择</string>
    <string name="please_select_p_c_a">请选择省市区地址</string>
    <string name="please_input_success_phone_numbuter">请输入正确手机号</string>
    <string name="photo">相册</string>
    <string name="select_bank">选择银行</string>
    <string name="go_auth">去认证</string>
    <string name="cancal">取消</string>
    <string name="prompt">提示</string>
    <string name="promptlocation">定位失败</string>
    <string name="ok">好</string>
    <string name="setting">设置</string>
    <string name="now_version">当前版本</string>
    <string name="subbranch">支行</string>
    <string name="please_select_subb_bank">请选择支行</string>
    <string name="please_input_money">请输入金额</string>
    <string name="go_bind">去绑定</string>
    <string name="no_bind_bankcard">还没有绑定银行卡</string>
    <string name="upload_succees">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="signno">签收单</string>
    <string name="chakanqianshoudan">查看签收单</string>
    <string name="xiehuodi1">卸货地</string>
    <string name="zhuangtai">状态</string>
    <string name="signnodetails">签收单详情</string>
    <string-array name="transaction_type">
        <item>全部</item>
        <item>充值</item>
        <item>提现</item>
        <item>支付</item>
    </string-array>
    <string-array name="transaction_time">
        <item>全部</item>
        <item>三天之内</item>
        <item>一周之内</item>
        <item>一个月之内</item>
        <item>一个季度之内</item>
    </string-array>
    <string name="company_name">巴布科技有限公司</string>
    <string name="company_code">Copyright ⓒ 2017 万运通</string>
    <string name="login">登录</string>
    <string name="zuoyegenzong">作业跟踪</string>
    <string name="please_input_zhanghao">请输入账号</string>
    <string name="please_input_psd">请输入密码</string>
    <string name="msg_center">消息中心</string>
    <string name="msg_details">消息详情</string>
    <string name="loading_examine">装载照片</string>
    <string name="qianshou_pic">签收照片</string>
    <string name="commit">提交</string>
    <string name="examine_succeed">审核通过</string>
    <string name="examine_unsucceed">审核不通过</string>
    <string name="xingshiguiji">行驶轨迹</string>
    <string name="shishiweizhi">实时位置</string>
    <string name="orderdetails">订单详情</string>
    <string name="yundanhao">运单号</string>
    <string name="state">状态</string>
    <string name="tihuo">提货</string>
    <string name="xiehuo">卸货</string>
    <string name="tihuo_time">计划提货时间</string>
    <string name="shiji_tihuo_time">实际提货时间</string>
    <string name="huowu">货物</string>
    <string name="huowu1">货物:</string>
    <string name="zhuangxiezhaopian">装卸照片</string>
    <string name="beizhu">备注</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="onclickisexit">再次点击退出应用</string>
    <string name="login_succeed">登录成功</string>
    <string name="login_faild">登录失败</string>
    <string name="login_neterr">网络异常</string>
    <string name="NET_ERROR">网络异常</string>
    <string name="error">异常</string>
    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>
    <string name="chongzhi">充值</string>
    <string name="chuxuka">储蓄卡</string>
    <string name="queding">确定</string>
    <string name="shuruyanzhengma">输入验证码</string>
    <string name="msg">消息</string>
    <string name="plsase_shouquan_sdcard">请授权SD卡权限</string>
    <string name="plsase_location_sdcard">请授权定位权限</string>
    <string name="plsase_shouquan_location_sdcard">请授权读写/定位权限</string>
    <string name="plsase_look_location_or_network">请检查网络或查看是否授权定位</string>
    <string name="saomiaoerweimahuoqu">扫描二维码获取</string>
    <string name="select">选择</string>
    <string name="shoudongshuru">手动输入</string>
    <string name="navigation">导航</string>
    <string name="details">详情</string>
    <string name="oilcard">油卡</string>
    <string name="carinfo">车辆信息</string>
    <string name="uploadpic">上传照片</string>
    <string name="please_input_car_info">请如实填写车辆信息</string>
    <string name="please_input_person_info">请填写个人信息</string>
    <string name="phone_numbuter">手机号</string>
</resources>