<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/background_color">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/defautl_navigationbar_size">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/nav_title_text_color"/>
    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/main_gray_line" />

    <LinearLayout
        android:layout_marginTop="20dp"
        style="@style/LinelayoutStyle"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginHorizontal="15dp">

        <EditText
            android:id="@+id/et_phoneNum"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/icon_phone"
            android:inputType="phone"
            android:hint="@string/please_input_zhanghao"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color_gray"
        android:layout_marginHorizontal="15dp"/>


    <LinearLayout
        style="@style/LinelayoutStyle"
        android:orientation="horizontal"
        android:layout_marginHorizontal="15dp">

        <EditText
            android:id="@+id/et_authCode"
            style="@style/EditTextStyle"
            android:drawableLeft="@drawable/icon_verificationcode"
            android:inputType="textVisiblePassword"
            android:hint="@string/please_input_auth_code"/>
        <View
            android:layout_width="1px"
            android:layout_marginVertical="10dp"
            android:layout_height="match_parent"
            android:background="@color/main_gray_line"/>
        <TextView
            android:id="@+id/tv_authCode"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textSize="13sp"
            android:textColor="@color/text_color_gray"
            android:gravity="center"
            android:text="@string/getAuthCode"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color_gray"
        android:layout_marginHorizontal="15dp"/>
    <Button
        android:id="@+id/tv_commit"
        style="@style/ButtonStyle"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/queding"
        android:textSize="16sp"/>
</LinearLayout>