<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/defautl_navigationbar_size"
        app:navigationIcon="@drawable/goback_black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/text_color_default"
            android:text="@string/personalinfoauth"/>

    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/main_gray_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle"
            android:textSize="13sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/gerenxinxi"/>
        <View
            android:layout_width="25dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/text_color_default"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle"
            android:textSize="13sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/carinfo"/>
        <View
            android:layout_width="25dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:background="#BDBFC2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewStyle"
            android:textSize="13sp"
            android:layout_gravity="center"
            android:textColor="#BDBFC2"
            android:text="@string/uploadpic"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <include layout="@layout/layout_auth_peison_info"
            android:visibility="gone"/>
        <include layout="@layout/layout_auth_car_info"
            android:visibility="gone"/>
        <include layout="@layout/layout_auth_image_info"
            android:visibility="visible"/>

    </LinearLayout>





    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/xiayibu"
        android:background="@drawable/btn_bg_corners_5dp_blue_normal_and_pass"/>



</LinearLayout>