<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_details_yellow_color"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/details"
            android:textSize="9sp"
            android:textColor="@color/text_color_icon_title"
            android:gravity="center"/>
    </LinearLayout>
    <Space
        android:layout_width="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_navigation_green_color"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/navigation"
            android:textSize="9sp"
            android:textColor="@color/text_color_icon_title"
            android:gravity="center"/>
    </LinearLayout>

    <Space
        android:layout_width="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_youka_red_color"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/oilcard"
            android:textSize="9sp"
            android:textColor="@color/text_color_icon_title"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>